# Formatters

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
lines_after_imports = 2
skip_glob = ['venv*']

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.py$'
exclude = '''
/(
    \.git
  | \.venv.*
  | __pycache__
  | venv.*
  | build
  | dist
)/
'''


# Poetry

[tool.poetry]
name = "comlink"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiobotocore = "^2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
pytest-asyncio = "^0.19.0"
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
